--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,298 @@
 * {
-  Margin: 0;
-  Padding: 0;
-  Box-sizing: border-box;
-} 
+  font-family: Arial;
+  margin: 0;
+  padding: 0;
+  scroll-padding-top: 2rem;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
 
-Body {
-  Background-color: skyblue;
-} 
+img {
+  width: 100%;
+}
+
+body {
+    color: white;
+    background: black;
+  }
+  
+  section {
+    padding: 4rem 0 3rem;
+  }
+
+.one {
+  max-width: 500px;
+  margin: auto;
+  width: 100%;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: black;
+  box-shadow: 0 1px 4px grey;
+  z-index: 100;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.logo {
+  font-size: 1.1rem;
+  color: white;
+  font-weight: 600;
+}
+#cart-icon {
+  position: relative;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+#cart-icon[data-quantity]::after {
+  content: '';
+}
+
+#cart-icon[data-quantity]::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 20px;
+  width: 15px;
+  height: 15px;
+  background: greenyellow;
+  border-radius: 50%;
+  color: transparent;
+  font-size: 12px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 360px;
+  min-height: 100vh;
+  padding: 20px;
+  background: black;
+  box-shadow: -2px 0 4px black;
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.cart.active {
+  right: 0;
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.cart-title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+
+.total {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1.2rem;
+  border-top: 1px solid green;
+}
+
+.total-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+
+.total-price {
+  font-size: 1.075rem;
+  margin: 1rem 0 0 0.7rem;
+}
+
+.btn-pay {
+  display: flex;
+  justify-content: center;
+  margin: 1.5rem auto 0 auto;
+  padding: 12px 20px;
+  width: 50%;
+  text-align: center;
+  border: none;
+  border-radius: 2rem;
+  background: seagreen;
+  color: black;
+  font-size: 1rem;
+  font-style: italic;
+  font-size: 500;
+  cursor: pointer;
+}
+
+#close-cart {
+  position: absolute;
+  top: 1rem;
+  right: 0.8rem;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+}
+
+.cart-box {
+  display: grid;
+  grid-template-columns: 32% 50% 18%;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.cart-img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  object-position: center;
+  padding: 10px;
+}
+
+.detail-box {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.cart-product-title {
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.cart-price {
+  font-weight: 500;
+}
+
+.cart-quantity {
+  border: 1px solid white;
+  outline-color: black;
+  width: 2.8rem;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 4px;
+}
+
+.cart-remove {
+  font-size: 24px;
+  color: black;
+  cursor: pointer;
+}
+
+.section-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 1.8rem;
+}
+
+.shop {
+  margin-top: 2rem;
+}
+
+.shop-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px, auto));
+  gap: 6rem;
+}
+
+.product-box {
+  position: relative;
+  background: rosybrown;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.product-box:hover {
+  background: black;
+  border: 3px solid indigo;
+  box-shadow: 0 8px 32px grey;
+  transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.product-box:hover .product-title, 
+.product-box:hover .price {
+  color: #fff;
+}
+.product-img {
+  width: 100%;
+  height: auto;
+  border-radius: 50px;
+  margin-bottom: 1.5rem;
+}
+
+.product-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.8rem;
+}
+
+.price {
+  font-weight: 500;
+}
+
+.add-cart {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background: white;
+  color: black;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.add-cart:hover {
+  background: black;
+}
+
+.sc-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sc-container img {
+  width: 200px;
+  margin: 2rem 0;
+  border-radius: 50px;
+}
+
+.sc-container h1 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.sc-container p {
+  max-width: 600px;
+  font-size: 0.970rem;
+  text-align: center;
+  margin: 0.5rem 0;
+}
+
+.sc-btn {
+  padding: 10px 20px;
+  border-radius: 2rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+/* making responsive */
